<resources>
    <string name="app_name">Lab06_393Balanin_Notes</string>
    <string name="buttonn_delete">Delete</string>
    <string name="buttonn_create">Create</string>
    <string name="buttonn_edit">Edit</string>

    <string name="text_noteName">Title</string>
    <string name="text_content">Content</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
</resources>